# yanifarma-sample1

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  init_database.py  pyproject.toml  test_api.py
backend/app/: app.py  crud.py  database.py  models.py  schemas.py
backend/app/models/: __init__.py  base.py  cliente.py  compra.py  inventario.py  pago.py  pedido.py  producto.py  proveedor.py  usuario.py  venta.py
frontend/: .prettierrc  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: axios.config.ts
frontend/src/api/services/: compras.ts  customers.ts  index.ts  inventory.ts  pedidos.ts  products.ts  sales.ts  suppliers.ts
frontend/src/components/: CreateUser.tsx  UsersBox.tsx
frontend/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  SearchBar.tsx  Select.tsx  Spinner.tsx  Table.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/pages/compras/: CompraDetails.tsx  CompraEdit.tsx  CompraForm.tsx  ComprasList.tsx
frontend/src/pages/customers/: CustomerForm.tsx  CustomersList.tsx
frontend/src/pages/inventory/: InventoryDetails.tsx  InventoryList.tsx
frontend/src/pages/pedidos/: PedidoDetails.tsx  PedidoEdit.tsx  PedidoForm.tsx  PedidosList.tsx
frontend/src/pages/products/: ProductForm.tsx  ProductsList.tsx
frontend/src/pages/sales/: SaleDetails.tsx  SaleEdit.tsx  SaleForm.tsx  SalesHistory.tsx
(+2 files in other folders)
